icone is visible for full screen fixed

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ a {
 }
 .bar-icon {
   display: none;
-  cursor: pointer;
   font-size: 40px;
 }
 
